<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4"
    android:orientation="horizontal"
    android:id="@+id/gridlayout" >

    <TextView
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/calculator"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
	   android:layout_column="3"
	   android:text="@string/math_divisor"/>
	
	<Button android:text="@string/one"/>
	
	<Button android:text="@string/two"/>
	
	<Button android:text="@string/three"/>
	
	<Button android:text="@string/math_mul"/>
	
	<Button android:text="@string/four"/>
	
	<Button android:text="@string/five"/>
	
	<Button android:text="@string/six"/>
	
	<Button android:text="@string/math_minus"/>
	
	<Button android:text="@string/seven"/>
	
	<Button android:text="@string/eight"/>
	
	<Button android:text="@string/nine"/>
	
	<Button
	android:layout_gravity="fill"
	android:layout_rowSpan="3"
	android:text="@string/math_add"/>
	
	<Button
	android:layout_columnSpan="2"
	android:layout_gravity="fill"
	android:text="@string/zero"/>
	
	<Button android:text="@string/zero2"/>
	
	<Button
	android:layout_columnSpan="3"
	android:layout_gravity="fill"
	android:text="@string/math_equal"/>


    <TextView
        android:id="@+id/formula"
        android:layout_columnSpan="3"
        android:layout_rowSpan="2"
        android:maxWidth="190dip"
        android:maxLength="200"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" />

    <Button
        android:id="@+id/button2"
        android:text="@string/math_hex" />

    <Button
        android:id="@+id/button1"
        android:text="@string/math_cls" />

</GridLayout>
