<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
   	xmlns:android="http://schemas.android.com/apk/res/android"    	
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:fillViewport="true"
	>

	<LinearLayout android:id="@+id/all_content" 
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	>
	<LinearLayout
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content">

		<CheckBox android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/show_img_1" 
			android:text="@string/show_img_1">
		</CheckBox>

		<CheckBox android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/show_img_2" 
			android:text="@string/show_img_2">
		</CheckBox>
		
	</LinearLayout>    	

   		<include android:id="@+id/list_item1_e"
			layout="@layout/yi_list_item_header"
			android:text="@string/yi_list_item_1" />	

		<include android:id="@+id/list_item1" 
			layout="@layout/yi_list_item_1"/>	
			
   		<include android:id="@+id/list_item2_e"
			layout="@layout/yi_list_item_header"
			android:text="@string/yi_list_item_2" />	
			
		<include android:id="@+id/list_item2" 
			layout="@layout/yi_list_item_2"/>

   		<include android:id="@+id/list_item3_e"
			layout="@layout/yi_list_item_header"
			android:text="@string/yi_list_item_3" />
				
		<include android:id="@+id/list_item3" 
			layout="@layout/yi_list_item_3"/>			

   		<include android:id="@+id/list_item4_e"
			layout="@layout/yi_list_item_header"
			android:text="@string/yi_list_item_4" />	
						
		<include android:id="@+id/list_item4" 
			layout="@layout/yi_list_item_4"/>	

   		<include android:id="@+id/list_item9_e"
			layout="@layout/yi_list_item_header"
			android:text="@string/yi_list_item_9" />	
					
		<include android:id="@+id/list_item9" 
			layout="@layout/yi_list_item_9"/>	

   		<include android:id="@+id/list_item10_e"
			layout="@layout/yi_list_item_header"
			android:text="@string/yi_list_item_10" />	
					
		<include android:id="@+id/list_item10" 
			layout="@layout/yi_list_item_10"/>	

   		<include android:id="@+id/list_item11_e"
			layout="@layout/yi_list_item_header"
			android:text="@string/yi_list_item_11" />	
					
		<include android:id="@+id/list_item11" 
			layout="@layout/yi_list_item_11"/>	

   		<include android:id="@+id/list_item12_e"
			layout="@layout/yi_list_item_header"
			android:text="@string/yi_list_item_12" />	
			
		<include android:id="@+id/list_item12" 
			layout="@layout/yi_list_item_12"/>	
   		
   		<include android:id="@+id/list_item13_e"
			layout="@layout/yi_list_item_header"
			android:text="@string/yi_list_item_13" />	
				
		<include android:id="@+id/list_item13" 
			layout="@layout/yi_list_item_13"/>	

                <include android:id="@+id/list_item14_e"
                        layout="@layout/yi_list_item_header"
                        android:text="@string/yi_list_item_14" />

                <include android:id="@+id/list_item14" 
                        layout="@layout/yi_list_item_14"/>

	</LinearLayout>
		
</ScrollView>
	 

