<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <ToggleButton
	        android:id="@+id/hideButton"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:textOn="@string/show"
	        android:textOff="@string/hide"
	        android:checked="true" />
        
        <ToggleButton
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textOn="Home"
            android:textOff="Home"
            android:checked="true" />
        
        <ToggleButton
            android:id="@+id/titleButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textOn="@string/title"
            android:textOff="@string/title"
            android:checked="true" />
        
        <ToggleButton
            android:id="@+id/upButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textOn="@string/as_up"
            android:textOff="@string/as_up"
            android:checked="false" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/standardButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/standard" />
        
        <Button
            android:id="@+id/listButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/list" />
        
        <Button
            android:id="@+id/tabButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tabs" />
        
    </LinearLayout>
    <Button
        android:id="@+id/startCustomAction1"
        android:layout_width="match_parent"
        android:textSize="12sp"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/startCustomAction2"
        android:layout_width="match_parent"
        android:textSize="12sp"
        android:layout_height="wrap_content" />
    <FrameLayout android:id="@+id/fragment_content"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />
</LinearLayout>