<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/enable_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable" />

        <Button
            android:id="@+id/disable_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disable" />

    </LinearLayout>

    <NumberPicker
        android:id="@+id/numberPicker1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" />
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/min_number"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/one" >
        </EditText>

        <Button
            android:id="@+id/min_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setMin" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/max_number"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number" >
        </EditText>

        <Button
            android:id="@+id/max_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setMax" />

    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/set_value"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number" >
        </EditText>

        <Button
            android:id="@+id/set_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setValue" />

    </LinearLayout>

</LinearLayout>