<?xml version="1.0" encoding="utf-8"?>


<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android" 
	android:orientation="vertical"
	android:layout_height="match_parent" 
	android:layout_width="match_parent">
<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="match_parent"><LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btn_enable" android:text="@string/enable_all"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btn_disable" android:text="@string/disable_all"></Button>






</LinearLayout><LinearLayout android:id="@+id/LinearLayout03" android:layout_width="wrap_content" android:layout_height="wrap_content"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btn_time" android:text="@string/time_dlg"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/date_dlg" android:id="@+id/btn_date"></Button></LinearLayout><DatePicker android:id="@+id/DatePicker01" android:layout_width="wrap_content" android:layout_height="wrap_content"></DatePicker><TimePicker android:id="@+id/TimePicker01" android:layout_width="wrap_content" android:layout_height="wrap_content"></TimePicker>











</LinearLayout>


</ScrollView>
